[gd_scene load_steps=2 format=3 uid="uid://b045mtiqjowrr"]

[ext_resource type="Script" uid="uid://dxq74grcgfa0t" path="res://scene/level_system.gd" id="1_u4w6l"]

[node name="LevelSystem" type="Node2D"]
script = ExtResource("1_u4w6l")

[node name="Timer" type="Timer" parent="."]

[node name="LevelLabel" type="Label" parent="."]
offset_right = 58.0
offset_bottom = 23.0
text = "等级：1"

[node name="ProgressLabel" type="Label" parent="."]
offset_left = 3.0
offset_top = 49.0
offset_right = 79.0
offset_bottom = 72.0

[node name="LabelProgress" type="ProgressBar" parent="."]
offset_left = 1.0
offset_top = 20.0
offset_right = 76.0
offset_bottom = 47.0
